projected-vol.yml
#projected volume can be secrets, configMaps,downwardAPI, secretAccountToken
apiVersion: v1
kind: Pod
metadata:
  name: test-projected-volume
spec:
  containers:
  - name: test-projected-volume
    image: busybox
    args:
    - sleep
    - "86400"
    volumeMounts:
    - name: all-in-one
      mountPath: "/projected-volume"
      readOnly: true
  volumes:
  - name: all-in-one
    projected:
      sources:
      - secret:
          name: user
      - secret:
          name: pass

#Creating secret
# Create files containing the username and password:
#   echo -n "admin" > ./username.txt
#   echo -n "1f2d1e2e67df" > ./password.txt

# Package these files into secrets:
#   kubectl create secret generic user --from-file=./username.txt
#   kubectl create secret generic pass --from-file=./password.txt
