qos-besteffort.yml
#no info on memory and cpu limts => BestEffort
apiVersion: v1
kind: Pod
metadata:
  name: qos-demo-3
  namespace: qos-example
spec:
  containers:
  - name: qos-demo-3-ctr
    image: nginx
    
    
    
#view detailed info
#kubectl get pod <pod name> -n <namespace> --output=yaml
spec:
  containers:
    ...
    resources: {}
  ...
  qosClass: BestEffort
