Traffic_requesttimeout.yml
#Setting up request timeouts
#Make sure you have run the below command before proceeding
#kubectl apply -f samples/bookinfo/networking/virtual-service-all-v1.yaml

#Routing the requests to v2 of reviews:
cat <<EOF | kubectl apply -f -
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v2
EOF

#Now add a delay of 2s for ratings service:
cat <<EOF | kubectl apply -f -
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings
spec:
  hosts:
  - ratings
  http:
  - fault:
      delay:
        percent: 100
        fixedDelay: 2s
    route:
    - destination:
        host: ratings
        subset: v1
EOF

#open the page or if it is opened refresh it, it will take a time of nearly 2s since we have added delay

#Now add timeout for the reviews service
cat <<EOF | kubectl apply -f -
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v2
    timeout: 0.5s
EOF

#Refresh the page and u see Sorry, product reviews are currently unavailable for this book. since there is a delay of 2s and 
#timeout is 0.5s
